# svelte-rust-chess

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src/: Logic.svelte
src/routes/: +page.svelte
src/rust/: Cargo.toml
src/rust/src/: lib.rs
