[package]
name = "rust"
version = "0.1.0"
edition = "2021"
description = "Rust WASM"
repository = "https://github.com/Nomeon/svelte-rust-chess"
license = "LGPL-2.1"
readme = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
gloo-utils = { version = "0.1", features = ["serde"] }


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
